RESOLVED FIXED235509
[Forms] Value doesn't change for stepUp()/stepDown() with out of range values
https://bugs.webkit.org/show_bug.cgi?id=235509
Summary [Forms] Value doesn't change for stepUp()/stepDown() with out of range values
zsun
Reported 2022-01-24 06:07:51 PST
Currently WebKit throws "invalid state" for these cases. As per section 10 in https://html.spec.whatwg.org/multipage/input.html#dom-input-stepup, we should do "return", which is to indicate that value doesn't change.
Attachments
Patch (10.26 KB, patch)
2022-01-24 06:29 PST, zsun
no flags
Patch (39.71 KB, patch)
2022-02-03 05:25 PST, zsun
no flags
Patch (39.64 KB, patch)
2022-02-03 07:19 PST, zsun
no flags
Patch (15.03 KB, patch)
2022-02-03 18:26 PST, Sam Weinig
ews-feeder: commit-queue-
zsun
Comment 1 2022-01-24 06:29:14 PST
zsun
Comment 2 2022-01-24 08:27:49 PST
There are a few tests failed in fast/forms/, these tests are expecting "invalid state". I guess it probably makes sense to reach an agreement to use "return {}" rather than "return Exception { InvalidStateError }" for out of range for stepup() and stepdown() first, before putting effort on updating these tests? Any comments? Thank you!
Radar WebKit Bug Importer
Comment 3 2022-01-31 06:08:19 PST
zsun
Comment 4 2022-02-03 05:25:50 PST
Chris Dumez
Comment 5 2022-02-03 07:10:19 PST
zsun
Comment 6 2022-02-03 07:19:44 PST
Chris Dumez
Comment 7 2022-02-03 07:23:01 PST
Comment on attachment 450770 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=450770&action=review > LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/input-stepdown-expected.txt:7 > +FAIL Calling stepDown() on input - date - where value < min should not modify value. The object is in an invalid state. Why is WK1 behaving differently here? The code running should be the same. I suspect those WK1 baselines are wrong. > LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/input-stepup-expected.txt:8 > +FAIL Calling stepUp() on input -date- where value > max should not modify value. The object is in an invalid state. ditto.
Chris Dumez
Comment 8 2022-02-03 07:39:21 PST
Comment on attachment 450770 [details] Patch r=me. Based on EWS output, those Mac-wk1 baselines are correct so r+. That said, I am kinda curious why our behavior is worse on WK1 here.
zsun
Comment 9 2022-02-03 07:59:44 PST
(In reply to Chris Dumez from comment #8) > Comment on attachment 450770 [details] > Patch > > r=me. Based on EWS output, those Mac-wk1 baselines are correct so r+. Thanks very much for the review! > I am kinda curious why our behavior is worse on WK1 here. Probably not "worse". One sub-test (number) is now passing for WK1 while for other platforms all underflow/overflow sub-tests are passing.
Chris Dumez
Comment 10 2022-02-03 08:00:54 PST
(In reply to zsun from comment #9) > (In reply to Chris Dumez from comment #8) > > Comment on attachment 450770 [details] > > Patch > > > > r=me. Based on EWS output, those Mac-wk1 baselines are correct so r+. > > Thanks very much for the review! > > > I am kinda curious why our behavior is worse on WK1 here. > > Probably not "worse". One sub-test (number) is now passing for WK1 while for > other platforms all underflow/overflow sub-tests are passing. I am not saying worse because of your patch. However, it seems WK2 got more new PASSes from your patch than WK1 no?
zsun
Comment 11 2022-02-03 11:15:54 PST
(In reply to Chris Dumez from comment #10) > (In reply to zsun from comment #9) > > (In reply to Chris Dumez from comment #8) > > > Comment on attachment 450770 [details] > > > Patch > > > > > > r=me. Based on EWS output, those Mac-wk1 baselines are correct so r+. > > > > Thanks very much for the review! > > > > > I am kinda curious why our behavior is worse on WK1 here. > > > > Probably not "worse". One sub-test (number) is now passing for WK1 while for > > other platforms all underflow/overflow sub-tests are passing. > > I am not saying worse because of your patch. However, it seems WK2 got more > new PASSes from your patch than WK1 no? Yes, you are right :)
EWS
Comment 12 2022-02-03 13:36:03 PST
Committed r289075 (246781@main): <https://commits.webkit.org/246781@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450770 [details].
Sam Weinig
Comment 13 2022-02-03 18:26:56 PST
Reopening to attach new patch.
Sam Weinig
Comment 14 2022-02-03 18:26:58 PST
zsun
Comment 15 2022-02-04 00:51:53 PST
(In reply to Sam Weinig from comment #14) > Created attachment 450847 [details] > Patch Sam, is the patch you attached related to this issue?
Chris Dumez
Comment 16 2022-02-04 07:19:36 PST
Comment on attachment 450847 [details] Patch He uploaded to the wrong bug.
Brent Fulgham
Comment 17 2022-02-04 14:51:21 PST
Moving back to Resolved/Fixed.
Tim Nguyen (:ntim)
Comment 18 2022-05-11 08:19:42 PDT
*** Bug 233721 has been marked as a duplicate of this bug. ***
pascoe@apple.com
Comment 19 2022-05-30 17:38:30 PDT
*** Bug 192587 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.